# photo-intel

./: .gitignore  README.md  ci_failure2.txt  docker-compose-gpu.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile  Dockerfile.vlm-wrapper
docs/: architecture.md  mvp-plan.md  vlm-wrapper-api-spec.md
migrations/: 001_initial_schema.sql
prompts/: vlm_prompts.yaml
src/: cli.py
src/api/: app.py
src/config/: settings.py
src/digest/: generator.py
src/ingest/: scanner.py
src/models/: database.py  tables.py
src/photo_intel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/queue/: postgres_queue.py
src/tasks/: __init__.py  planner.py  registry.py
src/tasks/handlers/: __init__.py  exif_handler.py  ocr_handler.py  thumbnail_handler.py  vlm_handler.py
src/utils/: logging.py
src/vlm_wrapper/: app.py
src/workers/: worker_loop.py
tests/: conftest.py  test_api_integration.py  test_exif_handler.py  test_ocr_entities.py  test_ocr_handler.py  test_planner_integration.py  test_registry.py  test_scanner.py  test_thumbnail_handler.py  test_vlm_handler.py  test_worker_integration.py
